--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "monitor"
+name = "sensory"
 version = "0.1.0"
 edition = "2021"
+description = "A sensor Monitoring tool that fetches data from lm_sensors."
+license = "MIT"
 
 [dependencies]
 iced = { version = "0.12", features = ["tokio"] }
 once_cell = "1.18.0"
 regex = "1.10.2"
-#iced = "0.12.1"
-#once_cell = "1.19.0"
-#regex = "1.10.4"
